# arca

./: .bashrc  Dockerfile  README.md  pyproject.toml
archive/profiles/trece/: .bash_history  .bashrc  .envrc  .gitignore  pyproject.toml  requirements.txt  shell.nix  trece
archive/profiles/trece/archive/: Untitled 1.ods
archive/profiles/trece/archive/active/exports/: genetics_20250813_171746.csv  harvest_20250813_171746.csv  harvest_detail_20250813_171746.csv  modules_20250813_171746.csv  sqlite_sequence_20250813_171746.csv  test.csv  withdrawals_20250813_171746.csv
archive/profiles/trece/archive/active/history_active/: integracion_13cc.md
archive/profiles/trece/archive/backup/docs/: 202508072257_a-1_control_gral.xlsx.bak  202508072257_registro_ingresos_negros_3CC.xlsx.bak  202508072257_test.xlsx.bak  202508122059_test-2.xlsx.bak
archive/profiles/trece/archive/backup/nix-shell/: 202508172025_shell.nix.bak  202508180747_shell.nix.bak
archive/profiles/trece/archive/backup/trece/: .bashrc.20250820_052250.bak  requirements.txt.20250820_050434.bak
archive/profiles/trece/archive/history/validaciones/: README.md
archive/profiles/trece/config/: config.py  config.yaml
archive/profiles/trece/data/: README.md
archive/profiles/trece/data/management/people/: entities.csv
archive/profiles/trece/data/management/settings/: concepts.csv  paymethods.csv
archive/profiles/trece/data/vege/: .~lock.05.csv#  05.csv
archive/profiles/trece/doc/cannabis_club/legal/: ejemplo_acta_de_alquiler.md  ejemplos_de_gabi.md  orientacion_para_ong.md
archive/profiles/trece/doc/cannabis_club/reuniones_semanales/: README.md
archive/profiles/trece/doc/contexto/: 13CC_contexto-IA.md  contexto_institucional_13CC_OFICIAL.md
archive/profiles/trece/doc/contexto/historicos/: PROYECTO_13CC_OVERVIEW.md  contexto_general_13CC.md
archive/profiles/trece/doc/control_general/: .~lock.V3 06.xlsx#  .~lock.a-1_control_gral.xlsx#  .~lock.cronograma.xlsx#  .~lock.vege.xlsx#  V3 06.xlsx  a-1_control_gral.xlsx  cronograma.xlsx  vege.xlsx
archive/profiles/trece/doc/control_general/flora/: B-1.xlsx
archive/profiles/trece/doc/control_general/gestion_conjunta/: Gestion_Conjunta.md  (+1 more)
archive/profiles/trece/meta/: trecedb.sql
archive/profiles/trece/src/script/: contar_esquejes.py  versionado.py
archive/profiles/trece/src/test/: test_load_config.py
archive/profiles/trece/src/util/: load_config.py  version.py
archive/profiles/trece/templates/file/: file.md
archive/profiles/trece/templates/impositive/: template_flujo_interno.xlsx  template_flujo_interno_beta.csv  template_libro_diario.xlsx
archive/profiles/trece/templates/script/: script.py
archive/profiles/trece/tmp/: README.md
(+595 files in other folders)
